# CSGraphics

./: CMakeLists.txt  README.md  appveyor.yml
lib/: CMakeLists.txt  FileImageRetriever.cpp  FileImageRetriever.h  Image.h  ImageIO.cpp  ImageIO.h  ImageProcessing.cpp  ImageProcessing.h  ImageRetriever.h  ImageTypes.h  RGBAPixel.cpp  RGBAPixel.h  RGBImage.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  ImageIO.cpp  ImageTest.cpp  RGBAPixel.cpp
test/ImageProcessing/: GrayScale.cpp  IntegralImage.cpp
test/ImageRetriever/: FileImageRetrieverTest.cpp
